# mealy

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: README.md  config.py  main.py
app/models/: __init_.py
app/models/orms/: base.py  recipe.py
app/routers/: recipe.py
app/schemas/: recipe.py
app/services/: __init__.py  recipe.py
app/src/: config.py
app/src/models/: __init__.py
app/src/models/orms/: __init__.py  base.py  recipe.py  user.py
app/src/routers/: base.py  recipe.py
app/src/schemas/: base.py  recipe.py
app/src/services/: auth.py  base.py  recipe.py
app/tests/: conftest.py
app/tests/crud-tests/: test_recipe_crud.py
